--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,24 @@
 Package: countMissing
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Count Missing Values For All Columns By Group
+Version: 0.1.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Yasmine", "McDonough", , "yazzi@student.ubc.ca", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Given a data frame `data` and a column `group`,
+    `count_all_missing_by_group()` creates a new data frame with one row
+    per level of `group`. The first column of the output data frame
+    contains the levels of `group`, and the rest of the columns contain
+    the number of missing values for all columns in `data` except `group`.
+License: MIT + file LICENSE
+URL: https://github.com/yasmine-mcdonough/countMissing
+BugReports: https://github.com/yasmine-mcdonough/countMissing/issues
+Imports: 
+    dplyr,
+    tibble,
+    tidyselect
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/yasmine-mcdonough/countMissing
-BugReports: https://github.com/yasmine-mcdonough/countMissing/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
